--- a/src/app/cost/cost.component.scss
+++ b/src/app/cost/cost.component.scss
@@ -48,6 +48,7 @@
 .currency-wrap{
     position:relative;
     font-size: 12px;
+    min-width: 100px;
 }
 
 .currency-code{
@@ -71,7 +72,7 @@
 
 .card-content{
     background-color: white;
-    padding: 10px;
+    padding-top: 5px;
     font-size: 15px;
 }
 
