--- a/src/app/cost/cost.component.html
+++ b/src/app/cost/cost.component.html
@@ -1,49 +1,160 @@
-<div class="container">
+<form *ngIf="form" [formGroup]="form">
+  <div class="container">
     <div class="row align-items-start">
       <div class="col-9">
         <h3 class="heading">COSTS</h3>
       </div>
       <div class="col-3 justify-content-end samerow">
         <div class="row">
-            <div class="col-sm-3 currency-text">
-                Currency
-            </div>
-            <div class="col-sm-3">
-                <select class="form-select dropdown-size" aria-label="sourceCurrency"  (change) = "onChange($any($event.target).value)">
-                        <option [selected]="item==sourceCurrency" [value]="item" *ngFor="let item of dropdown; let i = index">{{item}}</option>
-                  </select>
-            </div>
-            <div class="col-sm-6 currency-text">1 {{baseCurrency}} = <b>{{convertCurrency(1,baseCurrency,sourceCurrency) | number:'0.0-4'}} {{sourceCurrency}}</b></div>
+          <div class="col-sm-3 currency-text">
+            Currency
+          </div>
+          <div class="col-sm-3">
+            <select class="form-select dropdown-size" aria-label="sourceCurrency"
+              (change)="onChange($any($event.target).value)">
+              <option [selected]="item==sourceCurrency" [value]="item" *ngFor="let item of dropdown; let i = index">
+                {{item}}</option>
+            </select>
+          </div>
+          <div class="col-sm-6 currency-text">1 {{baseCurrency}} = <b>{{convertCurrency(1,baseCurrency,sourceCurrency,4)
+              | number:'0.2-4'}} {{sourceCurrency}}</b></div>
         </div>
       </div>
     </div>
-    <ng-container *ngFor="let cost of costs; let j = index">
-    <div class="row card-header align-items-start">
-        <div class="col-2">{{cost.name}}</div>
-        <div class="col-4">Account Code</div>
-        <div class="col-2 ">Quoted</div>
-        <div class="col-2">Screened</div>
-        <div class="col-4"></div>
-    </div>
-    <div *ngFor="let costItem of cost.costItems; let k = index" class="row card-content align-items-start">
-        <div class="col-2">{{costItem.name}}</div>
-        <div class="col-4">{{costItem.costItemAlias.accountingCode}}</div>
-        <div class="col-2 small-text">
-            <div class="row"><p class="mb-0"> <span style="color: grey">{{sourceCurrency}}</span> {{convertCurrency(costItem.costs[0].amount,initialCurrency,sourceCurrency) | number:'1.2-2'}}</p></div>
-            <div class="row grey"><p>{{baseCurrency}} {{convertCurrency(convertCurrency(costItem.costs[0].amount,initialCurrency,sourceCurrency),sourceCurrency,baseCurrency) | number:'1.2-2'}}</p></div>
+    <ng-container formArrayName="costs" class="test">
+      <div *ngFor="let cost of costs; let costIndex = index" [formGroupName]="costIndex">
+        <div class="row card-header align-items-start">
+          <div class="col-2">{{cost.value.name}}</div>
+          <div class="col-4">Account Code</div>
+          <div class="col-2 ">Quoted</div>
+          <div class="col-2">Screened</div>
+          <div class="col-4"></div>
         </div>
-        <div class="col-2">
-            <div class="row">
-
-                <div class="currency-wrap">
-                    <span class="currency-code">{{sourceCurrency}}</span>
-                    <input id="screened" class="form-control text-currency" [(ngModel)]="costItem.costs[1].amount" value="{{convertCurrency(costItem.costs[1].amount,initialCurrency,sourceCurrency)}}" aria-label="Amount (to the nearest dollar)">
+        <div formArrayName="costItems">
+          <ng-container *ngFor="let costItem of getCostItemsFor(costIndex); let costItemIndex = index"
+            [formGroupName]="costItemIndex">
+            <div formArrayName="costs" class="row card-content align-items-start">
+              <div class="col-2">{{costItem.value.name}}</div>
+              <div class="col-4">{{costItem.value.costItemAlias.accountingCode}}</div>
+              <div class="col-2 small-text" formGroupName="0">
+                <div class="row">
+                  <p class="mb-0"> <span style="color: grey">{{sourceCurrency}}</span>
+                    {{this.form.value.costs[costIndex].costItems[costItemIndex].costs[0].amount | number:'2.2-2'}}
+                  </p>
                 </div>
+                <div class="row grey">
+                  <p>{{baseCurrency}}
+                    {{convertToBase(this.form.value.costs[costIndex].costItems[costItemIndex].costs[0].amount,sourceCurrency)
+                    | number:'2.2-2'}}</p>
+                </div>
+              </div>
+              <div class="col-2" formGroupName="1">
+                <div class="row">
+
+                  <div class="currency-wrap">
+                    <span class="currency-code">{{sourceCurrency}}</span>
+                    <input id="screened" class="form-control text-currency" formControlName="amount"
+                      value="{{this.form.value.costs[costIndex].costItems[costItemIndex].costs[1].amount}}"
+                      aria-label="Amount (to the nearest dollar)">
+                  </div>
+                </div>
+                <div class="row small-bottom-text grey"> {{baseCurrency}}
+                  {{convertToBase(this.form.value.costs[costIndex].costItems[costItemIndex].costs[1].amount,sourceCurrency)
+                  | number:'2.2-2'}}
+                </div>
+
+              </div>
+              <div class="col-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z" />
+                </svg> {{costItem.value?.comments?.length || 0}}
+              </div>
+
+
             </div>
-            <div class="row small-bottom-text grey"> {{baseCurrency}} {{convertCurrency(convertCurrency(costItem.costs[1].amount,initialCurrency,sourceCurrency),sourceCurrency,baseCurrency) | number:'1.2-2'}}</div>
-            
+            <div formArrayName="comments" class="comment-section row"
+              *ngFor="let comment of getCommentsFor(costIndex,costItemIndex); let commentsIndex = index">
+              <ng-container class="comment-section" [formGroupName]="commentsIndex">
+                <div class="col-1 pt-2">
+                  <span *ngIf="checkInternal(costIndex,costItemIndex,commentsIndex)"
+                    class="badge rounded-pill text-bg-light">Internal</span>
+                  <span *ngIf="!checkInternal(costIndex,costItemIndex,commentsIndex)"
+                    class="badge rounded-pill text-bg-dark">External</span>
+                </div>
+                <div class="col-6">
+                  {{comment.value?.comment}}
+                </div>
+                <div class="col-3 pt-2">
+                  <p><span>{{comment.value?.author}}</span>
+                    <span style="color: grey;padding-left: 10px;">{{comment.value?.date | date:'d MMMM y H:mm'}}</span>
+                  </p>
+
+
+                </div>
+                <div class="col-2">
+                  <button style="color: grey" id="edit" type="button" class="btn btn-outline-secondar"><svg
+                      xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil"
+                      viewBox="0 0 16 16">
+                      <path
+                        d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />
+                    </svg></button>
+                  <button style="color: grey" id="delete" type="button" class="btn btn-outline-secondar">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                      class="bi bi-trash3" viewBox="0 0 16 16">
+                      <path
+                        d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z" />
+                    </svg>
+                  </button>
+                </div>
+
+              </ng-container>
+
+            </div>
+            <div class="row comment-add">
+              <div class="col-2">
+                <select class="form-select cmt-dropwdown" aria-label="commentType" placeholder="sel">
+                  <option value="" disabled selected hidden>Select comment type</option>
+                  <option value="Internal">Internal</option>
+                  <option value="External">External</option>
+                </select>
+              </div>
+            </div>
+          </ng-container>
+
+          <div class="row card-content align-items-start total">
+            <div class="col-2">Total</div>
+            <div class="col-4"></div>
+            <div class="col-2 small-text">
+              <div class="row">
+                <p class="mb-0"> <span style="color: grey">{{sourceCurrency}}</span>
+                  {{calTotal(this.form.value.costs[costIndex].costItems,0)| number:'2.2-2'}}</p>
+              </div>
+              <div class="row grey">
+                <p>{{baseCurrency}}
+                  {{convertToBase(calTotal(this.form.value.costs[costIndex].costItems,0),sourceCurrency)
+                  | number:'2.2-2'}}</p>
+              </div>
+            </div>
+            <div class="col-2 small-text">
+              <div class="row">
+                <p class="mb-0"> <span style="color: grey">{{sourceCurrency}}</span>
+                  {{calTotal(this.form.value.costs[costIndex].costItems,1)| number:'2.2-2'}}</p>
+              </div>
+              <div class="row grey">
+                <p>{{baseCurrency}}
+                  {{convertToBase(calTotal(this.form.value.costs[costIndex].costItems,1),sourceCurrency)
+                  | number:'2.2-2'}}</p>
+              </div>
+            </div>
+            <div class="col-4"></div>
           </div>
-        <div class="col-4"></div>
-    </div>
-  </ng-container>
+
+        </div>
+
+      </div>
+
+    </ng-container>
   </div>
+</form>
