--- a/src/app/cost/cost.component.html
+++ b/src/app/cost/cost.component.html
@@ -65,16 +65,19 @@
 
               </div>
               <div class="col-2">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat"
+                <button  type="button" class="btn btn-outline-secondar" (click)="toggleComments(costIndex,costItemIndex)">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat"
                   viewBox="0 0 16 16">
                   <path
                     d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z" />
-                </svg> {{costItem.value?.comments?.length || 0}}
+                </svg>
+                </button>
+                 {{costItem.value?.comments?.length || 0}}
               </div>
 
 
             </div>
-            <div formArrayName="comments" class="comment-section row"
+            <div formArrayName="comments" [hidden]="!costItem.value?.toggle" class="comment-section row"
               *ngFor="let comment of getCommentsFor(costIndex,costItemIndex); let commentsIndex = index">
               <ng-container class="comment-section" [formGroupName]="commentsIndex">
                 <div class="col-1 pt-2">
@@ -114,18 +117,18 @@
             </div>
             <div class="row comment-add">
               <div class="col-2">
-                <select class="form-select cmt-dropwdown" aria-label="commentType">
+                <select  #internaltype class="form-select cmt-dropwdown" aria-label="commentType">
                   <option value="" disabled selected hidden>Select comment type</option>
                   <option value="Internal">Internal</option>
                   <option value="External">External</option>
                 </select>
               </div>
               <div class="col-9">
-                <input name="add-comment" class="comment-text" placeholder="Type Comment" id="" />
+                <input #commentInput name="add-comment" class="comment-text" placeholder="Type Comment" id="" />
                   
               </div>
               <div class="col">
-                <button type="button" class="btn btn-secondary">Add</button>
+                <button type="button" class="btn btn-secondary" (click)="addComments(costIndex,costItemIndex)">Add</button>
               </div>
             </div>
             
