--- a/src/app/cost/cost.component.html
+++ b/src/app/cost/cost.component.html
@@ -17,7 +17,7 @@
             </select>
           </div>
           <div class="col-sm-6 currency-text">1 {{baseCurrency}} = <b>{{convertCurrency(1,baseCurrency,sourceCurrency,4)
-              | number:'0.2-4'}} {{sourceCurrency}}</b></div>
+              | number:'1.2-4'}} {{sourceCurrency}}</b></div>
         </div>
       </div>
     </div>
@@ -39,13 +39,13 @@
               <div class="col-2 small-text" formGroupName="0">
                 <div class="row">
                   <p class="mb-0"> <span style="color: grey">{{sourceCurrency}}</span>
-                    {{this.form.value.costs[costIndex].costItems[costItemIndex].costs[0].amount | number:'2.2-2'}}
+                    {{this.form.value.costs[costIndex].costItems[costItemIndex].costs[0].amount | number:'1.2-2'}}
                   </p>
                 </div>
                 <div class="row grey">
                   <p>{{baseCurrency}}
                     {{convertToBase(this.form.value.costs[costIndex].costItems[costItemIndex].costs[0].amount,sourceCurrency)
-                    | number:'2.2-2'}}</p>
+                    | number:'1.2-2'}}</p>
                 </div>
               </div>
               <div class="col-2" formGroupName="1">
@@ -53,33 +53,36 @@
 
                   <div class="currency-wrap">
                     <span class="currency-code">{{sourceCurrency}}</span>
-                    <input id="screened" class="form-control text-currency" formControlName="amount"
-                      value="{{this.form.value.costs[costIndex].costItems[costItemIndex].costs[1].amount}}"
+                    <input type="text" class="form-control text-currency" formControlName="amount"
+                      [value]="this.form.value.costs[costIndex].costItems[costItemIndex].costs[1].amount"
                       aria-label="Amount (to the nearest dollar)">
                   </div>
                 </div>
                 <div class="row small-bottom-text grey"> {{baseCurrency}}
                   {{convertToBase(this.form.value.costs[costIndex].costItems[costItemIndex].costs[1].amount,sourceCurrency)
-                  | number:'2.2-2'}}
+                  | number:'1.2-2'}}
                 </div>
 
               </div>
               <div class="col-2">
-                <button  type="button" class="btn btn-outline-secondar" (click)="toggleComments(costIndex,costItemIndex)">
+                <button type="button" class="btn btn-outline-secondar"
+                  (click)="toggleComments(costIndex,costItemIndex)">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat"
-                  viewBox="0 0 16 16">
-                  <path
-                    d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z" />
-                </svg>
+                    viewBox="0 0 16 16">
+                    <path
+                      d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z" />
+                  </svg>
                 </button>
-                 {{costItem.value?.comments?.length || 0}}
+                {{costItem.value?.comments?.length || 0}}
               </div>
 
 
             </div>
-            <div formArrayName="comments" [hidden]="!costItem.value?.toggle" class="comment-section row"
+            
+            <ng-container *ngIf="costItem.value.toggle">
+              <div formArrayName="comments" class="comment-section row"
               *ngFor="let comment of getCommentsFor(costIndex,costItemIndex); let commentsIndex = index">
-              <ng-container class="comment-section" [formGroupName]="commentsIndex">
+              <ng-container  *ngIf="!comment.value.editMode" class="comment-section" [formGroupName]="commentsIndex">
                 <div class="col-1 pt-2">
                   <span *ngIf="checkInternal(costIndex,costItemIndex,commentsIndex)"
                     class="badge rounded-pill text-bg-light">Internal</span>
@@ -97,13 +100,13 @@
 
                 </div>
                 <div class="col-2">
-                  <button style="color: grey" id="edit" type="button" class="btn btn-outline-secondar"><svg
+                  <button style="color: grey" id="edit" type="button" class="btn btn-outline-secondar" (click)="onEdit(costIndex,costItemIndex,commentsIndex)"><svg
                       xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil"
                       viewBox="0 0 16 16">
                       <path
                         d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />
                     </svg></button>
-                  <button style="color: grey" id="delete" type="button" class="btn btn-outline-secondar">
+                  <button style="color: grey" id="delete" type="button" class="btn btn-outline-secondar" (click)="removeCmt(costIndex,costItemIndex,commentsIndex)">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                       class="bi bi-trash3" viewBox="0 0 16 16">
                       <path
@@ -113,25 +116,43 @@
                 </div>
 
               </ng-container>
+              <ng-container *ngIf="comment.value.editMode" class="comment-section" [formGroupName]="commentsIndex">
+                <div class="col-2">
+                  <select  #internaltypeEdit class="form-select cmt-dropwdown" id="i{{costIndex}}-j{{costItemIndex}}-k{{commentsIndex}}" aria-label="commentType"  [value]="comment.value?.type">
+                    <option value="Internal">Internal</option>
+                    <option value="External">External</option>
+                  </select>
+                </div>
+                <div class="col-9">
+                  <input #commentInputEdit name="add-comment" class="comment-text" placeholder="Type Comment" id="i{{costIndex}}-j{{costItemIndex}}-k{{commentsIndex}}" value="{{comment.value?.comment}}" />
+  
+                </div>
+                <div class="col">
+                  <button type="button" class="btn btn-secondary" 
+                    (click)="saveComments(costIndex,costItemIndex,commentsIndex)">Save</button>
+                </div>
+            </ng-container>
 
             </div>
+            </ng-container>
             <div class="row comment-add">
               <div class="col-2">
-                <select  #internaltype class="form-select cmt-dropwdown" aria-label="commentType">
+                <select #internaltype class="form-select cmt-dropwdown" id="i{{costIndex}}-j{{costItemIndex}}"(change)="checkType($any($event.target).value,costIndex,costItemIndex)"  aria-label="commentType">
                   <option value="" disabled selected hidden>Select comment type</option>
                   <option value="Internal">Internal</option>
                   <option value="External">External</option>
                 </select>
               </div>
               <div class="col-9">
-                <input #commentInput name="add-comment" class="comment-text" placeholder="Type Comment" id="" />
-                  
+                <input #commentInput disabled name="add-comment" class="comment-text" placeholder="Type Comment" (keyup)="checkAdd($any($event.target).value,costIndex,costItemIndex)" id="i{{costIndex}}-j{{costItemIndex}}" />
+
               </div>
               <div class="col">
-                <button type="button" class="btn btn-secondary" (click)="addComments(costIndex,costItemIndex)">Add</button>
+                <button type="button" class="btn btn-secondary" [disabled]="costItem.value?.addButton"
+                  (click)="addComments(costIndex,costItemIndex)">Add</button>
               </div>
             </div>
-            
+
           </ng-container>
 
           <div class="row card-content align-items-start total">
@@ -140,23 +161,23 @@
             <div class="col-2 small-text">
               <div class="row">
                 <p class="mb-0"> <span style="color: grey">{{sourceCurrency}}</span>
-                  {{calTotal(this.form.value.costs[costIndex].costItems,0)| number:'2.2-2'}}</p>
+                  {{calTotal(this.form.value.costs[costIndex].costItems,0)| number:'1.2-2'}}</p>
               </div>
               <div class="row grey">
                 <p>{{baseCurrency}}
                   {{convertToBase(calTotal(this.form.value.costs[costIndex].costItems,0),sourceCurrency)
-                  | number:'2.2-2'}}</p>
+                  | number:'1.2-2'}}</p>
               </div>
             </div>
             <div class="col-2 small-text">
               <div class="row">
                 <p class="mb-0"> <span style="color: grey">{{sourceCurrency}}</span>
-                  {{calTotal(this.form.value.costs[costIndex].costItems,1)| number:'2.2-2'}}</p>
+                  {{calTotal(this.form.value.costs[costIndex].costItems,1)| number:'1.2-2'}}</p>
               </div>
               <div class="row grey">
                 <p>{{baseCurrency}}
                   {{convertToBase(calTotal(this.form.value.costs[costIndex].costItems,1),sourceCurrency)
-                  | number:'2.2-2'}}</p>
+                  | number:'1.2-2'}}</p>
               </div>
             </div>
             <div class="col-4"></div>
